--- a/tutorials/introduction.Rmd
+++ b/tutorials/introduction.Rmd
@@ -12,9 +12,9 @@ knitr::opts_chunk$set(echo = TRUE, warning = T)
 ## Introduction
 The aims of this workshop are to empower non-, and beginner to intermediate, coders in accessing data from social media websites for use in landscape scale studies. To demonstrate the use of these data sets we will focus on two main lines of inquiry, species distributions and ecosystem services. By the end of today's workshop we hope that you will feel confident in accessing data sets from Flickr and Reddit and would be able to apply analytic methods to these data sets to meet your own research goals. If there is time at the end we will also demonstrate how to download data from Twitter, although we won't fully be able to cover in the workshop as it will takes a long time for each individual to get approval from Twitter for accessing their data.
 
-To make sure that everyone is at around the same level of knowledge going into the workshop we will briefly go over the basics of R and how to use R studio. This introduction is by no means an in depth guide into the workings of R, so if you are interested in learning more please ask and I can provide links to some really useful introductory guides after the workshop. For those familiar with R, we appreciate your patients while we briefly cover these introductory topics. The basics covered here will be suitable for learning how to download, manipulate, analyze, plot and export data from social media. 
+To make sure that everyone is at around the same level of knowledge going into the workshop we will briefly go over the basics of R and how to use R studio. This introduction is by no means an in depth guide into the workings of R, so if you are interested in learning more please ask and I can provide links to some really useful introductory guides after the workshop. For those familiar with R, we appreciate your patients while we briefly cover these introductory topics. The basics covered here will be suitable for learning how to download, manipulate, analyze, plot and export data from social media. If members of the group are not comfortable with using R we can create a breakout room and cover the materials there at a reduced pace.
 
-Throughout this workshop we encourage you to practice along with us. You can run the code directly from this document if you have it downloaded and opened in R studio, or you can copy the code from here into the console. To run the code from the RMD press the little play button in the top right of each code box, or highlight the code and press ctrl + enter. 
+Throughout this workshop we encourage you to practice along with us. You can run the code directly from this document if you have it downloaded and opened in R studio, or you can copy the code from here into the console. To run the code from the RMD press the little play button in the top right of each code box, or highlight the code and press ctrl + enter (cmd + enter for mac). 
 
 In the following document the r code appears on the first line (gray filled boxes) and where executed the results are printed on the next line (white filled boxes), for example the code 1 + 1 is run and provides the output of 2:
 
@@ -75,8 +75,9 @@ colMeans(tutorial_dataframe) #here we calculate the mean for each column
 
 It is also possible to read in data frames from other sources, such as .csv files. For this example, you should have the 'example_data.csv' file stored in the 'data' folder. To read this file in we need to tell R the type of file it is reading and where the file can be found. First, we can use the `read.csv()` function to tell R ro read in a csv. Second, we put the location of the data inside the function, here this would be ".//data//example_data.csv". In this pathway the "." tell R to look in your current working directory (the folder your work is automatically set to read), the "//data" tell R then the look in the data folder, and finally the "//example_data.csv" tells R to find the file in that folder called "example_data.csv". The example data is a fake survey of ten participants and the activity they are undertaking on a trail. R automatically assigns the columns as a data type, e.g. "Age" is stored as an integer (whole number) and "Activity" as a character type.
 
-```{r}
-read.csv(".//data//example_data.csv")
+```{r, eval = FALSE}
+#this code might not work on everyones computers so lets read it in via another method
+read.csv("./data/example_data.csv")
 ```
 
-These functions are available to you without any additional downloads. However, R is a powerful tool for a wide range of analysis including spatial analysis, textual analysis, image content analysis etc. Later in the tuorial we will learn how to download and access additional functions to carry out these types of analysis.
+These functions are available to you without any additional downloads. However, R is a powerful tool for a wide range of analysis including spatial analysis, textual analysis, image content analysis etc. Later in the tutorial we will learn how to download and access additional functions to carry out these types of analysis.
