--- a/tutorials/advanced.Rmd
+++ b/tutorials/advanced.Rmd
@@ -63,13 +63,14 @@ img_data <- parse_annotations(results)
 vision_results <- img_data$labels
 
 #save the outputs
-write.csv(vision_results, ".\\data\\gvision_example.csv")
+write.csv(vision_results, ".\\data\\vision_results.csv")
 ```
 
 Lets read what this would have created.
 
 ```{r}
-vision_results <- read.csv("~\\code\\iale_workshop\\data\\gvision_example.csv")
+#again reading this wont translate to everyones machine so we might need to read this in manually.
+vision_results <- read.csv("~\\code\\iale_workshop\\data\\vision_results.csv")
 
 head(vision_results)
 ```
@@ -124,7 +125,7 @@ You may have noticed, not only do these dictionaries have different methods of m
 
 ### AFINN and Flickr text
 
-Lets get some Flickr data.
+Lets get some Flickr data. Feel free to change the word mountains to anything you are interested in!
 
 ```{r}
 flickr_text <- photo_search(text = "mountain",
@@ -132,8 +133,7 @@ flickr_text <- photo_search(text = "mountain",
                             maxdate_taken = "2022-01-08")
 ```
 
-Now lets mergre all the text associated with the post (title, tags and description) into a single column. As the Flickr data is messy and contains lots of missing data we first create our own unique function called `paste2()`. For now lets not worry about the details of this function, but by doing `paste2 <- function(){}` we are telling R to create a new function called `paste2()` that carries out any code in the `{}` on the data defined in the `()`. To create a new column we can just use the `$` followed by a name of a column that doesn't alread exist, and then tell R what to place in this column
-
+Now lets merge all the text associated with the post (title, tags and description) into a single column. As the Flickr data is messy and contains lots of missing data we first create our own unique function called `paste2()`. For now lets not worry about the details of this function, but by doing `paste2 <- function(){}` we are telling R to create a new function called `paste2()` that carries out any code in the `{}` on the data defined in the `()`. To create a new column we can just use the `$` followed by a name of a column that doesn't already exist, and then tell R what to place in this column
 
 ```{r}
 #function to paste without copying NAs
@@ -156,7 +156,6 @@ head(flickr_text$text)
 
 Finally, we need to use the AFINN dictionary to assess the sentiment of each word in the new 'text' column. 
 
-
 The easiest way to do this is separate each piece of text into the individual words on a new row. 
 
 ```{r}
@@ -169,16 +168,54 @@ head(flickr_text$word)
 
 Next we add the dictionary sentiment value as a new row next to it. As both our data and the AFINN dictionary have a column called 'word' we can match our words to the values in the dictionary. This is achieved through the  `inner_join(get_sentiments("afinn")`. We then need to sum all the values for each individual photograph back up.This is achieved by the following lines of code: `group_by(url_l) %>% summarise(sentiment = sum(value))`
 
-In these parts of the code we are using `%>%` to tell R to remeber the first piece of data and apply the following functions to it in a step-by-step way. This is a bit complicated but all covered in a short amount of code, so please ask for clarification if needed!
+In these parts of the code we are using `%>%` to tell R to remember the first piece of data and apply the following functions to it in a step-by-step way. This is a bit complicated but all covered in a short amount of code, so please ask for clarification if needed!
 
 ```{r}
-#df of sum sentiment per photo 
+#data frame of sum sentiment per photo 
 afinn <- flickr_text %>% #select our data
   inner_join(get_sentiments("afinn")) %>% #add the afinn values as a new column
-  group_by(url_l) %>%
-  summarise(sentiment = sum(value))
+  group_by(url_l) %>% #tell R to treat each unique url as a group
+  summarise(sentiment = sum(value)) #sum the sentiment value of that group
 
 head(afinn)
 ```
 
 And there we have it, a summaries of the expressed sentiment for each photograph uploaded of a mountain in the first week of January. We can combine this with the spatial element or combine it with the image contents to assess the drivers of these sentiments. 
+
+
+## Challenge 3: Find the sentiment of whatever you want!
+
+Now you have some time to put all your new skills together. Edit the example code to find the sentiment of posts about whatever images you want! 
+
+```{r, eval=FALSE}
+flickr_text <- photo_search(text = "", #edit this section
+                            mindate_taken = "",
+                            maxdate_taken = "") #could add a bbox of shapefile as well
+
+#function to paste without copying NAs
+paste2 <- function(...,sep=", ") {
+  L <- list(...)
+  L <- lapply(L,function(x) {x[is.na(x)] <- ""; x})
+  gsub(paste0("(^",sep,"|",sep,"$)"),"",
+       gsub(paste0(sep,sep),sep,
+            do.call(paste,c(L,list(sep=sep)))))
+}
+
+#here we create a new column called text and paste in all the other text from that row
+flickr_text$text <- paste2(flickr_text$title, 
+                           flickr_text$description, 
+                           flickr_text$tags) 
+
+#unnest words - one row per word
+flickr_text <- flickr_text %>%
+  unnest_tokens(word, text) #creates col called word which matches afinn dictionary
+
+#data frame of sum sentiment per photo 
+afinn <- flickr_text %>% #select our data
+  inner_join(get_sentiments("afinn")) %>% #add the afinn values as a new column
+  group_by(url_l) %>% #tell R to treat each unique url as a group
+  summarise(sentiment = sum(value)) #sum the sentiment value of that group
+
+#Inspect the results
+head(afinn)
+```
